// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoSuggestCategory should render ellipsis when the returned results are less than the total results 1`] = `
<div
  className="auto-suggest__dropdown-category"
>
  <h4
    className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
  >
    Straatnamen
  </h4>
  <ul>
    <AutoSuggestItem
      content="Dam"
      isActive={false}
      key="Dam0"
      onSuggestionSelection={[Function]}
      query="dam"
    />
    <AutoSuggestItem
      content="Damloperspad"
      isActive={false}
      key="Damloperspad1"
      onSuggestionSelection={[Function]}
      query="dam"
    />
    <AutoSuggestItem
      content="Damrak"
      isActive={false}
      key="Damrak2"
      onSuggestionSelection={[Function]}
      query="dam"
    />
    <AutoSuggestItem
      content="..."
      isActive={false}
      key="...999"
      onSuggestionSelection={[Function]}
      query="dam"
    />
  </ul>
</div>
`;

exports[`AutoSuggestCategory should render no ellipsis when there aren't more results returned than the total results 1`] = `
<div
  className="auto-suggest__dropdown-category"
>
  <h4
    className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
  >
    Straatnamen
  </h4>
  <ul>
    <AutoSuggestItem
      content="Dam"
      isActive={false}
      key="Dam0"
      onSuggestionSelection={[Function]}
      query="dam"
    />
    <AutoSuggestItem
      content="Damloperspad"
      isActive={false}
      key="Damloperspad1"
      onSuggestionSelection={[Function]}
      query="dam"
    />
    <AutoSuggestItem
      content="Damrak"
      isActive={false}
      key="Damrak2"
      onSuggestionSelection={[Function]}
      query="dam"
    />
  </ul>
</div>
`;
